# word-square-rs

./: Cargo.toml  README.md  flake.nix
src/: main.rs  trie.rs
words/: Oxford 5000.txt
